src/test/deca/syntax/valid/include_cycle_3_2.deca


#include "include_cycle_3_3.deca"